# kitewright

./: .dockerignore  .gitignore  .trivyignore  BENCHMARKS.md  Cargo.toml  Dockerfile  LICENSE  README.md  server.json  smithery.yaml
.cargo/: audit.toml
.github/workflows/: ci.yml  mcp-npm.yml  npm.yml  pdf-npm.yml  release.yml
bindings/node/: .gitignore  Cargo.toml  README.md  binding.d.ts  binding.js  index.d.ts  index.js  package-lock.json  package.json
bindings/node/npm/darwin-arm64/: README.md  package.json
bindings/node/npm/darwin-x64/: README.md  package.json
bindings/node/npm/linux-x64-gnu/: README.md  package.json
bindings/node/npm/win32-x64-msvc/: README.md  package.json
bindings/node/src/: lib.rs
bindings/node/test/: invoice.e2e.mjs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/tests/: engine_test.rs
crates/pdf/: Cargo.toml  Dockerfile  Dockerfile.lite
crates/pdf/src/: chromium.rs  http.rs  lib.rs  main.rs  request.rs  typst_backend.rs
crates/pdf/testdata/: invoice.html  invoice.typ
crates/pdf/tests/: chromium_test.rs  http_test.rs  typst_test.rs
crates/server/: Cargo.toml
crates/server/src/: install.rs  main.rs
crates/server/tests/: http_test.rs
docs/: demo.tape  gen_demo.py
npm/kitewright-mcp/: .gitignore  README.md  bin.js  package.json
npm/kitewright-mcp/npm/darwin-arm64/: package.json
npm/kitewright-mcp/npm/darwin-x64/: package.json
npm/kitewright-mcp/npm/linux-x64-gnu/: package.json
npm/kitewright-mcp/npm/win32-x64-msvc/: package.json
npm/kitewright-pdf/: .gitignore  README.md  bin.js  package.json
npm/kitewright-pdf/npm/darwin-arm64/: package.json
npm/kitewright-pdf/npm/darwin-x64/: package.json
npm/kitewright-pdf/npm/linux-x64-gnu/: package.json
npm/kitewright-pdf/npm/win32-x64-msvc/: package.json
packaging/: kitewright.rb
testdata/: invoice-footer.html
