[package]
name = "kitewright-engine"
description = "Lightweight CDP browser engine for AI agents: lazy Chromium lifecycle, per-session browser contexts, LLM-friendly extraction"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
chromiumoxide = { version = "0.9", default-features = false }
futures = "0.3"
base64 = "0.22"
serde_json.workspace = true
dirs = "6"
