[package]
name = "kitewright"
description = "Kitewright — a lightweight browser-automation MCP server (Streamable HTTP) for AI agents. A single 7 MB binary alternative to Playwright-MCP."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kite"
path = "src/main.rs"

# `cargo binstall kitewright` downloads a prebuilt `kite` from the GitHub
# Release for the tag `v{version}`. Asset names are produced by
# .github/workflows/release.yml as `kite-<target-triple>.{tar.gz,zip}`.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/kite-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/kite-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
kitewright-engine = { path = "../engine" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rmcp = { version = "0.16", features = ["server", "transport-streamable-http-server", "transport-io"] }
axum = "0.8"
schemars = "1"
base64 = "0.22"
# `kite install`: fetch the Chrome-for-Testing manifest + download a
# chrome-headless-shell build. rustls (no system OpenSSL); minimal zip decode.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
zip = { version = "8", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
